# UE-Editor-MCPServer

./: .env.example  .gitignore  MCPServer.uplugin  README.md  main.py  pyproject.toml  requirements.txt
Content/Python/: CustomEventLoop.py  MCPServer.py  Manager.py  Start.py  init_unreal.py
Content/Python/mcp_server/: CustomEventLoop.py  MCPConfig.py  MCPCore.py  MCPForwarder.py  MCPServer.py  MCPStandalone.py  Manager.py  Start.py  __init__.py
Private/Tests/Python/: create_myactor_blueprint.py  test_modify_myactor.py
Source/MCPServer/: MCPServer.Build.cs
Source/MCPServer/Private/: MCPEditorLibrary.cpp  MCPLogCaptureBlueprintLibrary.cpp  MCPObjectInformDumpLibrary.cpp  MCPServer.cpp  MCPTeachingDataFilter.cpp  MCPTeachingSessionManager.cpp  ObjectPropertyChangeListener.cpp
Source/MCPServer/Public/: MCPEditorLibrary.h  MCPLogCaptureBlueprintLibrary.h  MCPObjectInformDumpLibrary.h  MCPServer.h  MCPTeachingDataFilter.h  MCPTeachingSessionManager.h  ObjectPropertyChangeListener.h
mcp_client_configs/: README.md  claude_desktop_config.json  cursor_settings_snippet.json
